# findflow_fenix

./: README.md
api/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  alembic.ini  pyproject.toml  readme.md  requirements-dev.txt  requirements-service.txt  requirements.txt
api/alembic/: README  env.py
api/alembic/versions/: 3b7563f9f598_create_organisations_and_users.py  e59811ca2d3e_create_initial_tables.py
api/config/: logging_config.yaml
api/config/local/: api_config.yaml  app.yaml  app_config.yaml  demos.yaml  indexer.yaml  oktai.yaml
api/docker/: Dockerfile  docker-compose.yaml
api/src/recursiveai/findflow/assistant/api/: __init__.py  app.py  app_config.py  app_context.py
api/src/recursiveai/findflow/assistant/api/models/: __init__.py  blocked_keywords.py  conversations.py  organisations.py  user_groups.py  users.py
api/src/recursiveai/findflow/assistant/api/routers/: __init__.py  blocked_keywords.py  conversations.py  health_checks.py  organisations.py  user_groups.py  users.py
api/src/recursiveai/findflow/assistant/api/schemas/: blocked_keywords.py  conversations.py  organisations.py  user_groups.py  users.py
api/src/recursiveai/findflow/assistant/api/services/: blocked_keywords.py  conversations.py  organisations.py  user_groups.py  users.py
api/src/recursiveai/findflow/assistant/common/: database.py  dependencies.py  exceptions.py
api/src/recursiveai/findflow/assistant/common/auths/: __init__.py  aws_auth.py  base_auth.py  gcp_auth.py
api/src/recursiveai/findflow/assistant/common/configs/: aws_config.py  base_config.py  (+1 more)
