[build-system]
requires = ["setuptools>=63", "setuptools-scm>=7"]
build-backend = "setuptools.build_meta"

[project]
name = "recursiveai-findflow-assistant"
version = "3.0.0"
description = "Application description"
requires-python=">=3.11,<3.12"
dependencies= [ ]
dynamic = ["optional-dependencies"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["recursiveai*"]
namespaces = true

[tool.setuptools.dynamic.optional-dependencies]
core = {file = ["requirements.txt"]}
service = {file = ["requirements-service.txt"]}
dev = {file = ["requirements-dev.txt"]}

[tool.pytest.ini_options]
addopts = "-ra -q -vv --cov=recursiveai"
testpaths = ["src/tests"]

[tool.pylint.MASTER]
disable = ["C0114", "C0115", "C0116"]
extension-pkg-allow-list = "pydantic"
generated-members = ["numpy.*", "torch.*"]

[tool.bandit]
exclude_dirs = ["src/tests"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pyright]
include = ["src"]
stubPath = ""
